--- a/css/style-VERSIONED.css
+++ b/css/style-VERSIONED.css
@@ -6933,10 +6933,13 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
         box-shadow var(--GW-page-toolbar-widget-flash-fall-duration) ease-in;
 }
 
-#page-toolbar.mobile .widget button {
+#page-toolbar.mobile .widget button,
+#page-toolbar.mobile .widget a {
+    position: relative;
     height: var(--toolbar-button-size);
 }
-#page-toolbar.mobile .widget button .icon {
+#page-toolbar.mobile .widget button .icon,
+#page-toolbar.mobile .widget a .icon {
     padding: 7px;
 }
 
@@ -7910,6 +7913,9 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 #page-toolbar.mobile .extracts-mode-selector button.select-mode-off .icon {
     padding: 4px;
 }
+#page-toolbar.mobile .dark-mode-selector button .icon {
+	padding: 6px;
+}
 
 /*************************/
 /*  Inline mode selectors.
@@ -7997,6 +8003,9 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 #page-toolbar #search-widget a .icon {
 	padding: 5px;
 }
+#page-toolbar.mobile #search-widget a .icon {
+	padding: 6px;
+}
 
 
 /***************/
@@ -8005,6 +8014,9 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 
 #page-toolbar #help-widget a .icon {
 	padding: 3px;
+}
+#page-toolbar.mobile #help-widget a .icon {
+	padding: 4px;
 }
 
 
