Minor renaming and refactoring of pop-frame-title-related code

--- a/template/include/pop-frame-title-standard.tmpl
+++ b/template/include/pop-frame-title-standard.tmpl
@@ -3,4 +3,4 @@
 	href="<{popFrameTitleLinkHref}>"
 	title="Open <{popFrameTitleLinkHref}> in <{whichTab}> <{tabOrWindow}>."
 	target="<{linkTarget}>"
-		><{popFrameTitleText}></a>
+		><{popFrameTitle}></a>
