--- a/css/style-VERSIONED.css
+++ b/css/style-VERSIONED.css
@@ -2641,18 +2641,18 @@ p.intro-graf::first-line {
 }
 
 .admonition.tip::before {
-    background-image: url('/static/img/icon/icons.svg?v=1733516750#info-circle-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1733725643#info-circle-regular');
 }
 .admonition.note::before {
-    background-image: url('/static/img/icon/icons.svg?v=1733516750#hand-point-right-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1733725643#hand-point-right-regular');
     filter: invert(1);
 }
 .admonition.warning::before {
-    background-image: url('/static/img/icon/icons.svg?v=1733516750#triangle-exclamation-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1733725643#triangle-exclamation-regular');
     filter: invert(1);
 }
 .admonition.error::before {
-    background-image: url('/static/img/icon/icons.svg?v=1733516750#skull-crossbones-solid');
+    background-image: url('/static/img/icon/icons.svg?v=1733725643#skull-crossbones-solid');
     padding: 0.75em;
     top: 0;
     filter: invert(1);
@@ -5792,7 +5792,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 
 .popup .popframe-loading-spinner-view::before {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1733516750#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1733725643#circle-notch-light');
     animation: fa-spin 2s infinite linear;
     position: absolute;
     width: calc(100% - 1em);
@@ -5979,7 +5979,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
     */
 .popup.image:not(.dimensions-specified).loading-failed::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1733516750#xmark-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1733725643#xmark-regular');
     background-position: center;
     box-sizing: border-box;
     margin: 8px;
@@ -6450,7 +6450,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 
 .popin .popframe-loading-spinner-view::before {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1733516750#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1733725643#circle-notch-light');
     animation: fa-spin 2s infinite linear;
     position: absolute;
     width: calc(100% - 1em);
@@ -7430,7 +7430,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 
 #image-focus-overlay .help-overlay::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1733516750#question');
+    background-image: url('/static/img/icon/icons.svg?v=1733725643#question');
     background-origin: content-box;
     background-clip: content-box;
     position: absolute;
@@ -7634,7 +7634,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 .image-wrapper.focusable.small-image::after {
     content: "";
     background-color: var(--SA-image-focus-image-hover-tooltip-inverted-background-color);
-    background-image: url('/static/img/icon/icons.svg?v=1733516750#magnifying-glass-plus-light');
+    background-image: url('/static/img/icon/icons.svg?v=1733725643#magnifying-glass-plus-light');
     background-size: 56px 56px;
     background-origin: content-box;
     background-repeat: no-repeat;
@@ -8068,7 +8068,7 @@ a.include-loading-failed:empty {
 }
 
 a.include-loading.include-spinner {
-    --spinner-image: url('/static/img/icon/icons.svg?v=1733516750#circle-notch-solid');
+    --spinner-image: url('/static/img/icon/icons.svg?v=1733725643#circle-notch-solid');
 
     pointer-events: none;
 }
@@ -8149,7 +8149,7 @@ a.include-loading.include-spinner[data-link-icon]:not(:empty)::after {
 .markdownBody div.block-context-highlighted .block-context-highlight-here::before,
 .markdownBody :not(a) > span.block-context-highlighted:empty::before {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1733516750#manicule-right');
+    background-image: url('/static/img/icon/icons.svg?v=1733725643#manicule-right');
     background-origin: content-box;
     background-clip: content-box;
     background-repeat: no-repeat;
@@ -8838,8 +8838,9 @@ a[data-link-icon='𝓡 𝐒'] { /* Rolling Stone */
 
 a[data-link-icon='≈'] { /* similar-links (ALMOST EQUAL TO) */
     --link-icon-size: 0.95em;
-    --link-icon-offset-y: 0;
-    --link-icon-opacity: 0.85;
+    --link-icon-offset-x: 0.15em;
+    --link-icon-offset-y: 0em;
+    --link-icon-opacity: 0.75;
 }
 
 a[data-link-icon='♔'] { /* WBW / Wait But Why */
@@ -8968,7 +8969,7 @@ a[data-link-icon='apple'] {
 
 a[data-link-icon='arrows-pointing-inwards-to-dot'] { /* bl backlinks 'implosion' */
     --link-icon-size: 0.85em;
-    --link-icon-offset-y: 0.20em;
+    --link-icon-offset-y: 0.25em;
     --link-icon-opacity: 0.65;
 }
 
@@ -8986,7 +8987,7 @@ a[data-link-icon='audio-waveform-lines'] { /* Radiolab */
 
 a[data-link-icon='bibliography'] { /* lb link-bibliography 'table of contents' */
     --link-icon-size: 0.60em;
-    --link-icon-offset-y: 0.15em;
+    --link-icon-offset-y: 0.10em;
 }
 
 a[data-link-icon='bitcoin'] {
