--- a/css/links.css
+++ b/css/links.css
@@ -488,8 +488,9 @@ a[data-link-icon='𝓡 𝐒'] { /* Rolling Stone */
 
 a[data-link-icon='≈'] { /* similar-links (ALMOST EQUAL TO) */
     --link-icon-size: 0.95em;
-    --link-icon-offset-y: 0;
-    --link-icon-opacity: 0.85;
+    --link-icon-offset-x: 0.15em;
+    --link-icon-offset-y: 0em;
+    --link-icon-opacity: 0.75;
 }
 
 a[data-link-icon='♔'] { /* WBW / Wait But Why */
@@ -618,7 +619,7 @@ a[data-link-icon='apple'] {
 
 a[data-link-icon='arrows-pointing-inwards-to-dot'] { /* bl backlinks 'implosion' */
     --link-icon-size: 0.85em;
-    --link-icon-offset-y: 0.20em;
+    --link-icon-offset-y: 0.25em;
     --link-icon-opacity: 0.65;
 }
 
@@ -636,7 +637,7 @@ a[data-link-icon='audio-waveform-lines'] { /* Radiolab */
 
 a[data-link-icon='bibliography'] { /* lb link-bibliography 'table of contents' */
     --link-icon-size: 0.60em;
-    --link-icon-offset-y: 0.15em;
+    --link-icon-offset-y: 0.10em;
 }
 
 a[data-link-icon='bitcoin'] {
