--- a/include/inlined-head.html
+++ b/include/inlined-head.html
@@ -831,24 +831,14 @@ div#masked-links-key-toggle-info-alert img {
     filter: drop-shadow(0 0 3px var(--GW-reader-mode-masked-links-key-toggle-info-alert-panel-text-shadow-color));
 }
 
-/*  Manual link-icon SVGs: Recently-modified, manicule/index, theme-toggle icons
+/*  Recently-modified icon, manicule
  */
 .has-recently-modified-icon .recently-modified-icon-hook::before,
-.manicule svg,
-.icon-single-white-star-on-black-circle::before,
-.icon-moon-solid::before,
-.icon-book-open-solid::before,
-.icon-message-slash-solid::before,
-.icon-magnifying-glass::before,
-.icon-gear-solid::before,
-.icon-sun-solid::before,
-.icon-eye-slash-solid::before,
-.icon-manicule-right::before,
-.icon-manicule-left::before {
+.manicule svg {
     filter: invert(1);
 }
 
 </style>
-<link rel="stylesheet" href="/static/css/head.css?v=1733950233">
-<script src="/static/js/head.js?v=1733950233"></script>
+<link rel="stylesheet" href="/static/css/head.css?v=1733952217">
+<script src="/static/js/head.js?v=1733952217"></script>
 <link rel="preload" href="/static/img/icon/icons.svg?v=1733725643" as="image">
