--- a/css/head-GENERATED.css
+++ b/css/head-GENERATED.css
@@ -2747,7 +2747,7 @@ body.page-index[class*='special-christmas'] #sidebar a.logo {
 }
 /*	Elements to be deleted completely.
  */
-body.reader-mode-active #sidebar .sidebar-links,
+body.reader-mode-active #sidebar,
 body.reader-mode-active #page-metadata .page-status,
 body.reader-mode-active #page-metadata .page-confidence,
 body.reader-mode-active #page-metadata .page-importance,
@@ -2887,9 +2887,6 @@ body.reader-mode-active .reader-mode-style-not * {
 /*  Mobile layout adjustments.
  */
 @media all and (max-width: 649px) {
-	body.reader-mode-active #sidebar {
-		display: none;
-	}
 	body.reader-mode-active article {
 		margin-top: 0;
 	}
