--- a/css/reader-mode-initial.css
+++ b/css/reader-mode-initial.css
@@ -1,6 +1,6 @@
 /*	Elements to be deleted completely.
  */
-body.reader-mode-active #sidebar .sidebar-links,
+body.reader-mode-active #sidebar,
 body.reader-mode-active #page-metadata .page-status,
 body.reader-mode-active #page-metadata .page-confidence,
 body.reader-mode-active #page-metadata .page-importance,
@@ -140,9 +140,6 @@ body.reader-mode-active .reader-mode-style-not * {
 /*  Mobile layout adjustments.
  */
 @media all and (max-width: 649px) {
-	body.reader-mode-active #sidebar {
-		display: none;
-	}
 	body.reader-mode-active article {
 		margin-top: 0;
 	}
