Slightly refactor event ordering

--- a/include/inlined-asset-links.html
+++ b/include/inlined-asset-links.html
@@ -1,2 +1,2 @@
-<link rel="stylesheet" href="/static/css/style.css?v=1734296142" media="print" onload="this.media=`all`">
-<script src="/static/js/script.js?v=1734307370" async></script>
+<link rel="stylesheet" href="/static/css/style.css?v=1734331913" media="print" onload="this.media=`all`">
+<script src="/static/js/script.js?v=1734332066" defer></script>
