Add page thumbnails to page abstracts

--- a/css/style-GENERATED.css
+++ b/css/style-GENERATED.css
@@ -2360,6 +2360,12 @@ figure .image-wrapper::before {
     max-width: calc(100% - 2px);
 }
 
+/*	Figure in the page abstract.
+ */
+.page-abstract .page-thumbnail-figure.float-not {
+	max-width: unset;
+}
+
 /*  Image alt-text.
     */
 img::before {
