--- a/css/style-VERSIONED.css
+++ b/css/style-VERSIONED.css
@@ -2647,18 +2647,18 @@ p.intro-graf::first-line {
 }
 
 .admonition.tip::before {
-    background-image: url('/static/img/icon/icons.svg?v=1734331913#info-circle-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1734481578#info-circle-regular');
 }
 .admonition.note::before {
-    background-image: url('/static/img/icon/icons.svg?v=1734331913#hand-point-right-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1734481578#hand-point-right-regular');
     filter: invert(1);
 }
 .admonition.warning::before {
-    background-image: url('/static/img/icon/icons.svg?v=1734331913#triangle-exclamation-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1734481578#triangle-exclamation-regular');
     filter: invert(1);
 }
 .admonition.error::before {
-    background-image: url('/static/img/icon/icons.svg?v=1734331913#skull-crossbones-solid');
+    background-image: url('/static/img/icon/icons.svg?v=1734481578#skull-crossbones-solid');
     padding: 0.75em;
     top: 0;
     filter: invert(1);
@@ -5746,7 +5746,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 
 .popup .popframe-loading-spinner-view::before {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1734331913#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1734481578#circle-notch-light');
     animation: fa-spin 2s infinite linear;
     position: absolute;
     width: calc(100% - 1em);
@@ -5781,8 +5781,9 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
     left: 0;
     top: var(--popup-title-bar-height);
     width: 100%;
-    height: calc(100% - var(--popup-title-bar-height) - 0.1em - 1px);
-    padding-bottom: 0.1em;
+    height: calc(100% - var(--popup-title-bar-height) - 1px);
+    box-sizing: border-box;
+    padding: 0.1em 0.25em;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -5933,7 +5934,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
     */
 .popup.image:not(.dimensions-specified).loading-failed::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1734331913#xmark-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1734481578#xmark-regular');
     background-position: center;
     box-sizing: border-box;
     margin: 8px;
@@ -6404,7 +6405,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 
 .popin .popframe-loading-spinner-view::before {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1734331913#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1734481578#circle-notch-light');
     animation: fa-spin 2s infinite linear;
     position: absolute;
     width: calc(100% - 1em);
@@ -7414,7 +7415,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 
 #image-focus-overlay .help-overlay::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1734331913#question');
+    background-image: url('/static/img/icon/icons.svg?v=1734481578#question');
     background-origin: content-box;
     background-clip: content-box;
     position: absolute;
@@ -7618,7 +7619,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 .image-wrapper.focusable.small-image::after {
     content: "";
     background-color: var(--SA-image-focus-image-hover-tooltip-inverted-background-color);
-    background-image: url('/static/img/icon/icons.svg?v=1734331913#magnifying-glass-plus-light');
+    background-image: url('/static/img/icon/icons.svg?v=1734481578#magnifying-glass-plus-light');
     background-size: 56px 56px;
     background-origin: content-box;
     background-repeat: no-repeat;
@@ -8144,7 +8145,7 @@ a.include-loading-failed:empty {
 }
 
 a.include-loading.include-spinner {
-    --spinner-image: url('/static/img/icon/icons.svg?v=1734331913#circle-notch-solid');
+    --spinner-image: url('/static/img/icon/icons.svg?v=1734481578#circle-notch-solid');
 
     pointer-events: none;
 }
@@ -8225,7 +8226,7 @@ a.include-loading.include-spinner[data-link-icon]:not(:empty)::after {
 .markdownBody div.block-context-highlighted .block-context-highlight-here::before,
 .markdownBody :not(a) > span.block-context-highlighted:empty::before {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1734331913#manicule-right');
+    background-image: url('/static/img/icon/icons.svg?v=1734481578#manicule-right');
     background-origin: content-box;
     background-clip: content-box;
     background-repeat: no-repeat;
